app-deployment-K8S/templates/django-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gal-alon-django-deployment
  namespace: app-ga  # Specify the namespace
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app  # Match label with Service and ServiceMonitor
  template:
    metadata:
      labels:
        app: my-app  # Match label with Service and ServiceMonitor
    spec:
      nodeSelector:
        role: app  # Ensures this pod only runs on nodes labeled with role=app
      containers:
      - name: django
        image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/gal-alon-app-repo-ga:django-image-latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8001
      - name: node-exporter
        image: prom/node-exporter
        ports:
        - containerPort: 9100
          name: metrics  # Named 'metrics' to match the ServiceMonitor
