app-deployment-K8S/templates/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gal-alon-nginx-ingress
  namespace: app-ga
  annotations:
    kubernetes.io/ingress.class: "nginx"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:992382545251:certificate/7742499e-92c1-4cd2-8a3f-3533987894e8
    nginx.ingress.kubernetes.io/rewrite-target: /  # Use $1 to keep the rest of the path after the base path
spec:
  rules:
    - host: statuspage.gal-kamay.com  # Host for the NGINX service
      http:
        paths:
          - path: /    # Incoming path
            pathType: Prefix
            backend:
              service:
                name: gal-alon-nginx-service
                port:
                  number: 80
    - host: prometheus.gal-kamay.com  # Host for Prometheus
      http:
        paths:
          - path: /    # Incoming path
            pathType: Prefix
            backend:
              service:
                name: prometheus-kube-prometheus-prometheus
                port:
                  number: 9090
    - host: grafana.gal-kamay.com  # Host for Grafana
      http:
        paths:
          - path: /    # Incoming path
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
